--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^6.8.2",
     "nodemon": "^2.0.20"
   }
